# Stardust2020

./: .gitmodules  README.md  alias.git  history.rm  install.md  note.md  readme.txt  robot.md
arduino/Small_robot_PS2-MOTOR/: Small_robot_PS2-MOTOR.ino
arduino/Small_robot_PS2-MOTOR_2020_01_19_12_22/: Small_robot_PS2-MOTOR_2020_01_19_12_22.ino
arduino/Small_robot_PS2-MOTOR_2020_02_19_11_43/: Small_robot_PS2-MOTOR_2020_02_19_11_43.ino
arduino/phare/: Chenillard_AT_tiny85_Vcouleur.ino  Phare_v2.ino  schéma cablage.odt
doc/2019/: Readme.md  ros_launch.dot  ros_structure.dot  ros_structure.txt
doc/2020/: ros_launch.dot
ros/src/execute_node/: CMakeLists.txt  README.txt  package.xml
ros/src/execute_node/launch/: execute_launch.launch
ros/src/execute_node/nodes/: execute_node.py
ros/src/learning_joy/: CMakeLists.txt  package.xml
ros/src/sd_behavior/: CMakeLists.txt  package.xml
ros/src/sd_behavior/config/: r1_behavior.yaml  r2_behavior.yaml
ros/src/sd_behavior/src/: move_nodes.cpp
ros/src/sd_execute_node/: CMakeLists.txt  package.xml
ros/src/sd_execute_node/launch/: execute_launch.launch
ros/src/sd_execute_node/nodes/: sd_execute_node.py
ros/src/sd_hardware_interface/: CMakeLists.txt  README.md  package.xml
ros/src/sd_hardware_interface/config/: r1_hardware_interface.yaml
ros/src/sd_hardware_interface/launch/: sd_hardware_interface.launch
ros/src/sd_hardware_interface/src/: control_loop.cpp  hardware_interface.cpp
ros/src/sd_main/: CMakeLists.txt  package.xml
ros/src/sd_main/launch/: rx.launch
ros/src/sd_sensor/launch/: sd_sensor.launch
(+16 files in other folders)
